...
    <string name="app_name">ParkHere</string>
    <string name="title_market">Market</string>
    <string name="title_buyer">Buyer</string>
    <string name="title_owner">Owner</string>
    <string name="market">Market</string>
    <string name="loading">Loading ... </string>
    <string name="auth_failed">Authentification Failed</string>
    <string name="email_account_creation_error">Failed to create email account.</string>
    <string name="text_already_have_account">The account exists already</string>
    <string name="button_sign_in">Sign In</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="hint_enter_password">Enter Your Password</string>
    <string name="image_view_logo_image">ParkMe</string>
...
    <string name="parking_ads_end_date">End Date:</string>
    <string name="parking_ads_start_time">Time:</string>
    <string name="firebase_image_upload_failure">Unable to upload image.</string>
    <string name="firebase_new_ads_success">Create New Ad Successfully!</string>
    <string name="firebase_image_upload_success">Image Uploaded Successfully!</string>
    <string name="parking_ad_market">Parking Ads</string>
    <string name="msg_logout">Log Out!</string>
    <string name="title_cart">Cart</string>
    <string name="schedule">Schedule</string>
    <string name="parking_ad_orders">My Orders</string>

</resources>

