<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:textColor="@color/colorAccent"
        android:text="@string/create_parking_ads"
        android:layout_alignParentLeft="true"
        />


        <ImageButton
            android:id="@+id/ibtn_show_my_ads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            app:srcCompat="@drawable/ic_sort_black_24dp"
            android:tint="@color/colorAccent"
            android:background="@null"
            />
    </RelativeLayout>
    <ScrollView
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <ImageButton
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:id="@+id/ibtn_take_photo"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:srcCompat="@android:drawable/ic_menu_camera" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parking_address"
                    />
                <EditText
                    android:id="@+id/edit_park_address"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="24dp"
                    android:inputType="textPostalAddress"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parking_city"
                    />
                <EditText
                    android:id="@+id/edit_parking_city"
                    android:layout_marginLeft="24dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parking_description"
                    />
                <EditText
                    android:id="@+id/edit_parking_description"
                    android:layout_marginLeft="24dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parking_daily_rate"
                    />
                <EditText
                    android:id="@+id/edit_parking_daily_rate"
                    android:layout_marginLeft="24dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parking_ads_start_date"
                />

            <EditText
                android:id="@+id/edit_ads_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:focusable="false"
                />


            <EditText
                android:id="@+id/edit_ads_start_hour"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                />

        </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parking_ads_end_date"
                    />

                <EditText
                    android:id="@+id/edit_ads_end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                   />


                <EditText
                    android:id="@+id/edit_ads_end_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/btn_submit_new_ads"
                style="@style/Widget.ParkHere.Button.Login"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_field_height"
                android:layout_marginBottom="@dimen/lv_header_text_size"
                android:background="@color/primary"
                android:text="@string/submit_parking_ads"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
