...
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_profile" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_profile_logout"
        style="@style/FAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:background="@color/dark_green"
        app:srcCompat="@drawable/ic_call_missed_outgoing_black_24dp"
...
